--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,30 @@
 body{
-    background-color: antiquewhite;
+
     text-align: center;
+    background-color: antiquewhite;
+
+
+
 }
 h1{
-    border: 2px solid black;
-    border-radius: 9px;
-    text-align: center;
-    border-bottom-color: cadetblue;
-}
-div{
-    border: 2px solid grey;
-    width: 512px;
-    border-radius: 120vw;
-    padding: 34px;
-    text-align: center;
+   
+    color: rgb(151, 153, 51);
+    padding: 5px;
+    margin-left: 40vw;
+    margin-right: 40vw;
+    outline-offset: 10px;
+    border: 7px solid red;
+    border-radius: 9vw;
+    background-color: sandybrown;
+   
+    
 }
 p{
-    text-decoration: rebeccapurple;
-    text-align: center;
+    border: 7px solid black;
+    border-radius: 9vw;
+    width: fit-content;
+    padding: 30px;
+    margin: 100px ;
+    margin-top: auto;
+    background-color: yellow;
 }
