--- a/css/index.css
+++ b/css/index.css
@@ -10,21 +10,20 @@ h1{
    
     color: rgb(151, 153, 51);
     padding: 5px;
-    margin-left: 40vw;
-    margin-right: 40vw;
     outline-offset: 10px;
-    border: 7px solid red;
+    border: 7px solid rgb(3, 3, 3);
     border-radius: 9vw;
     background-color: sandybrown;
+    margin: auto;
+    width: max-content;
    
     
 }
 p{
     border: 7px solid black;
     border-radius: 9vw;
-    width: fit-content;
+    margin: 20px auto ;
+    width: 920px;
     padding: 30px;
-    margin: 100px ;
-    margin-top: auto;
     background-color: yellow;
 }
